# wasm-dynlink

./: CMakeLists.txt  README.md
docs/: index.html
src/: runtime.c
wasm/: CMakeLists.txt  cart.c  host.c
